--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Presentation</title>
+    <title>Pason DataHub Web Style Guide</title>
 
     <meta charset='utf-8'>
     <style type="text/css">
@@ -20,10 +20,26 @@
 
     <section class='slides layout-regular template-default'>
       <article>
-        <h1>This is the first slide.</h1>
+				<h1>Mark Bennett</h1>
+				<aside>
+					<p><strong>Front-end Developer</strong></p>
+					<p>
+						<a href="mailto:mark.bennett@burmis.ca">mark.bennett@burmis.ca</a><br>
+						<a href="http://twitter.com/markbennett">@markbennett</a>
+					</p>
+				</aside>
       </article>
       <article>
-        <h3>This is the next slide.</h3>
+        <h2>How do the pieces fit together?</h2>
+      </article>
+      <article>
+        <h2>Completing the picture</h2>
+      </article>
+      <article>
+			  <h2>DataHub Web Style Guide</h2>
+				<section>
+				  <a href="http://hub-na-msc-pro-1.int.pason.com/pason-webstyle/">http://hub-na-msc-pro-1.int.pason.com/pason-webstyle/</a>
+				</section>
       </article>
   </body>
 </html>
