Add basic layout. Missing styles.w

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       </article>
       <article>
 			  <h2>DataHub Web Style Guide</h2>
-				<section>
+				<aside class="centered">
 				  <a href="http://hub-na-msc-pro-1.int.pason.com/pason-webstyle/">http://hub-na-msc-pro-1.int.pason.com/pason-webstyle/</a>
-				</section>
+				</aside>
       </article>
   </body>
 </html>
