--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body style='display: none'>
 
     <section class='slides layout-regular template-default'>
-      <article>
+      <article class="headshot">
 				<h1>Mark Bennett</h1>
 				<aside>
 					<p><strong>Front-end Developer</strong></p>
@@ -29,10 +29,10 @@
 					</p>
 				</aside>
       </article>
-      <article>
+      <article class="puzzle-pieces">
         <h2>How do the pieces fit together?</h2>
       </article>
-      <article>
+      <article class="mona-lisa">
         <h2>Completing the picture</h2>
       </article>
       <article>
